--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,11 +3,12 @@
       android:versionCode="1"
       android:versionName="1.0.0" package="net.gumbercules.loot">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:label="@string/app_name" android:name="Loot">
+        <activity android:label="@string/app_name" android:name=".Loot">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    </application>
+    <activity android:name=".TransactionEdit"></activity>
+</application>
 </manifest> 
