--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,14 +3,28 @@
       android:versionCode="1"
       android:versionName="1.0.0" package="net.gumbercules.loot">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="sensor"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
+<category android:name="android.intent.category.DEFAULT"></category>
 </intent-filter>
-</activity><activity android:label="@string/app_name" android:name=".TransactionActivity" android:screenOrientation="sensor">
+</activity><activity android:name=".TransactionActivity" android:screenOrientation="unspecified">
             
-        </activity>
-    <activity android:name=".TransactionEdit" android:screenOrientation="sensor"></activity>
+        <intent-filter><action android:name="android.intent.action.MAIN"></action>
 
-<activity android:name=".AccountEdit" android:screenOrientation="sensor"></activity>
+
+
+</intent-filter>
+</activity>
+    <activity android:name=".TransactionEdit" android:screenOrientation="unspecified"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+
+
+</intent-filter></activity>
+
+<activity android:name=".AccountEdit" android:screenOrientation="unspecified"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+
+
+</intent-filter></activity>
 </application>
+
+
 </manifest> 
