added RepeatActivity and corresponding layout

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,6 +24,10 @@
 
 
 </intent-filter></activity>
+<activity android:name="RepeatActivity"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+
+
+</intent-filter></activity>
 </application>
 
 
