--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -24,7 +24,7 @@
 
 
 </intent-filter></activity>
-<activity android:name=".RepeatActivity" android:launchMode="singleTask"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<activity android:name=".RepeatActivity"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 
 
 </intent-filter></activity>
