--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="1"
-      package="net.gumbercules.loot" android:versionName="@string/version">
+      package="net.gumbercules.loot" android:versionName="1.0.0" android:versionCode="1">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 
