--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,7 +32,7 @@
 
 
 </intent-filter></activity>
-<activity android:launchMode="singleTask" android:name=".PinActivity" android:label="@string/app_name"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+<activity android:launchMode="singleTask" android:name=".PinActivity" android:label="@string/app_name" android:clearTaskOnLaunch="true"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 <category android:name="android.intent.category.DEFAULT"></category>
 </intent-filter></activity>
