--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.gumbercules.loot" android:versionName="1.2.6" android:versionCode="18">
+      package="net.gumbercules.loot" android:versionCode="19" android:versionName="1.2.7">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 
@@ -44,4 +44,5 @@
 
 <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
+<uses-sdk android:minSdkVersion="3"></uses-sdk>
 </manifest> 
