--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,7 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.gumbercules.loot" android:versionName="1.4.1" android:versionCode="27">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask" android:clearTaskOnLaunch="true"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 
 
 </intent-filter>
