--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,43 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.gumbercules.loot" android:versionName="1.4.1" android:versionCode="27">
+      package="net.gumbercules.loot" android:versionCode="27" android:versionName="1.4.2_alpha1">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask" android:clearTaskOnLaunch="true"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-
-
-</intent-filter>
+        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask" android:clearTaskOnLaunch="true">
 </activity><activity android:name=".TransactionActivity" android:screenOrientation="unspecified">
             
-        <intent-filter><action android:name="android.intent.action.MAIN"></action>
-
-
-
-</intent-filter>
+        
 </activity>
-    <activity android:name=".TransactionEdit" android:screenOrientation="unspecified"><intent-filter><action android:name="android.intent.action.MAIN"></action>
+    <activity android:name=".TransactionEdit" android:screenOrientation="unspecified"></activity>
 
-
-</intent-filter></activity>
-
-<activity android:name=".AccountEdit" android:screenOrientation="unspecified"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-
-
-</intent-filter></activity>
-<activity android:name=".RepeatActivity"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-
-
-</intent-filter></activity>
-<activity android:name=".SettingsActivity"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-
-
-
-</intent-filter></activity>
+<activity android:name=".AccountEdit" android:screenOrientation="unspecified"></activity>
+<activity android:name=".RepeatActivity"></activity>
+<activity android:name=".SettingsActivity"></activity>
 <activity android:launchMode="singleTask" android:name=".PinActivity" android:label="@string/app_name" android:clearTaskOnLaunch="true"><intent-filter><action android:name="android.intent.action.MAIN"></action>
 <category android:name="android.intent.category.LAUNCHER"></category>
 <category android:name="android.intent.category.DEFAULT"></category>
 </intent-filter></activity>
-<activity android:name=".DonateActivity"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-</intent-filter>
+<activity android:name=".DonateActivity">
 </activity>
 </application>
 
