--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="net.gumbercules.loot" android:versionName="1.4.3" android:versionCode="29">
+      android:versionCode="30" package="net.gumbercules.loot" android:versionName="1.4.90">
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask" android:clearTaskOnLaunch="true">
 </activity><activity android:name=".TransactionActivity" android:screenOrientation="unspecified">
@@ -18,6 +18,7 @@
 </intent-filter></activity>
 <activity android:name=".DonateActivity">
 </activity>
+
 </application>
 
 
