added some premium setting hooks added more color options and background coloring fixed transaction provider paths

--- a/.project
+++ b/.project
@@ -3,6 +3,7 @@
 	<name>loot</name>
 	<comment></comment>
 	<projects>
+		<project>loot premium</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
