--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,29 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="30" package="net.gumbercules.loot" android:versionName="1.4.90">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
-        <activity android:name=".AccountChooser" android:label="@string/app_name" android:screenOrientation="unspecified" android:launchMode="singleTask" android:clearTaskOnLaunch="true">
-</activity><activity android:name=".TransactionActivity" android:screenOrientation="unspecified">
-            
-        
-</activity>
-    <activity android:name=".TransactionEdit" android:screenOrientation="unspecified"></activity>
-
-<activity android:name=".AccountEdit" android:screenOrientation="unspecified"></activity>
-<activity android:name=".RepeatActivity"></activity>
-<activity android:name=".SettingsActivity"></activity>
-<activity android:launchMode="singleTask" android:name=".PinActivity" android:label="@string/app_name" android:clearTaskOnLaunch="true"><intent-filter><action android:name="android.intent.action.MAIN"></action>
-<category android:name="android.intent.category.LAUNCHER"></category>
-<category android:name="android.intent.category.DEFAULT"></category>
-</intent-filter></activity>
-<activity android:name=".DonateActivity">
-</activity>
-
-<provider android:authorities="net.gumbercules.loot.transactionprovider" android:name="net.gumbercules.loot.TransactionProvider"></provider>
-</application>
-
-
-<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-
-<uses-sdk android:minSdkVersion="3"></uses-sdk>
+	android:versionCode="30" package="net.gumbercules.loot"
+	android:versionName="1.4.90">
+	<application android:icon="@drawable/icon" android:label="@string/app_name">
+		<activity android:name=".AccountChooser" android:label="@string/app_name"
+			android:screenOrientation="unspecified" android:launchMode="singleTask"
+			android:clearTaskOnLaunch="true">
+		</activity>
+		<activity android:name=".TransactionActivity"
+			android:screenOrientation="unspecified">
+		</activity>
+		<activity android:name=".TransactionEdit"
+			android:screenOrientation="unspecified"></activity>
+		<activity android:name=".AccountEdit"
+			android:screenOrientation="unspecified"></activity>
+		<activity android:name=".RepeatActivity"></activity>
+		<activity android:name=".SettingsActivity"></activity>
+		<activity android:launchMode="singleTask" android:name=".PinActivity"
+			android:label="@string/app_name" android:clearTaskOnLaunch="true">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN"></action>
+				<category android:name="android.intent.category.LAUNCHER"></category>
+				<category android:name="android.intent.category.DEFAULT"></category>
+			</intent-filter>
+		</activity>
+		<activity android:name=".DonateActivity">
+		</activity>
+		<provider android:authorities="net.gumbercules.loot.transactionprovider"
+			android:name="net.gumbercules.loot.TransactionProvider"></provider>
+		<provider android:name="net.gumbercules.loot.AccountProvider"
+			android:authorities="net.gumbercules.loot.accountprovider"></provider>
+	</application>
+	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
+	<uses-sdk android:minSdkVersion="3"></uses-sdk>
 </manifest> 
