--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,33 +3,34 @@
 	android:versionCode="30" package="net.gumbercules.loot"
 	android:versionName="1.4.90">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
-		<activity android:name=".AccountChooser" android:label="@string/app_name"
+		<activity android:label="@string/app_name"
 			android:screenOrientation="unspecified" android:launchMode="singleTask"
-			android:clearTaskOnLaunch="true">
+			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.AccountChooser">
 		</activity>
-		<activity android:name=".TransactionActivity"
-			android:screenOrientation="unspecified">
+		<activity android:screenOrientation="unspecified"
+			android:name="net.gumbercules.loot.TransactionActivity">
 		</activity>
-		<activity android:name=".TransactionEdit"
-			android:screenOrientation="unspecified"></activity>
-		<activity android:name=".AccountEdit"
-			android:screenOrientation="unspecified"></activity>
-		<activity android:name=".RepeatActivity"></activity>
-		<activity android:name=".SettingsActivity"></activity>
-		<activity android:launchMode="singleTask" android:name=".PinActivity"
-			android:label="@string/app_name" android:clearTaskOnLaunch="true">
+		<activity android:screenOrientation="unspecified"
+			android:name="net.gumbercules.loot.TransactionEdit"></activity>
+		<activity android:screenOrientation="unspecified"
+			android:name="net.gumbercules.loot.AccountEdit"></activity>
+		<activity android:name="net.gumbercules.loot.RepeatActivity"></activity>
+		<activity android:name="net.gumbercules.loot.SettingsActivity"></activity>
+		<activity android:launchMode="singleTask" android:label="@string/app_name"
+			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.PinActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN"></action>
 				<category android:name="android.intent.category.LAUNCHER"></category>
 				<category android:name="android.intent.category.DEFAULT"></category>
 			</intent-filter>
 		</activity>
-		<activity android:name=".DonateActivity">
+		<activity android:name="net.gumbercules.loot.DonateActivity">
 		</activity>
 		<provider android:authorities="net.gumbercules.loot.transactionprovider"
 			android:name="net.gumbercules.loot.TransactionProvider"></provider>
 		<provider android:name="net.gumbercules.loot.AccountProvider"
 			android:authorities="net.gumbercules.loot.accountprovider"></provider>
+		<activity android:name="net.gumbercules.loot.PremiumNotFoundActivity"></activity>
 	</application>
 	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
 	<uses-sdk android:minSdkVersion="3"></uses-sdk>
