--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,36 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionCode="32" android:versionName="1.99.091016">
+	package="net.gumbercules.loot" android:versionCode="32"
+	android:versionName="1.99.091016">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
 			android:screenOrientation="unspecified" android:launchMode="singleTask"
-			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.AccountChooser">
-		</activity>
+			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.AccountChooser" />
 		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.TransactionActivity">
-		</activity>
+			android:name="net.gumbercules.loot.TransactionActivity" />
 		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.TransactionEdit"></activity>
+			android:name="net.gumbercules.loot.TransactionEdit" />
 		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.AccountEdit"></activity>
-		<activity android:name="net.gumbercules.loot.RepeatActivity"></activity>
-		<activity android:name="net.gumbercules.loot.SettingsActivity"></activity>
+			android:name="net.gumbercules.loot.AccountEdit" />
+		<activity android:name="net.gumbercules.loot.RepeatActivity" />
+		<activity android:name="net.gumbercules.loot.SettingsActivity" />
 		<activity android:launchMode="singleTask" android:label="@string/app_name"
 			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.PinActivity">
 			<intent-filter>
-				<action android:name="android.intent.action.MAIN"></action>
-				<category android:name="android.intent.category.LAUNCHER"></category>
-				<category android:name="android.intent.category.DEFAULT"></category>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
-		<activity android:name="net.gumbercules.loot.DonateActivity">
-		</activity>
+		<activity android:name="net.gumbercules.loot.DonateActivity" />
 		<provider android:authorities="net.gumbercules.loot.transactionprovider"
-			android:name="net.gumbercules.loot.TransactionProvider"></provider>
+			android:name="net.gumbercules.loot.TransactionProvider" />
 		<provider android:name="net.gumbercules.loot.AccountProvider"
-			android:authorities="net.gumbercules.loot.accountprovider"></provider>
-		<activity android:name="net.gumbercules.loot.PremiumNotFoundActivity"></activity>
+			android:authorities="net.gumbercules.loot.accountprovider" />
+		<activity android:name="net.gumbercules.loot.PremiumNotFoundActivity" />
+		<activity android:name="net.gumbercules.loot.AboutActivity">
+			<intent-filter>
+				<action android:name="net.gumbercules.loot.intent.action.ABOUT" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
 	</application>
-	<uses-permission android:name="android.permission.INTERNET"></uses-permission>
-	<uses-sdk android:minSdkVersion="3"></uses-sdk>
+	<uses-permission android:name="android.permission.INTERNET" />
+	<uses-sdk android:minSdkVersion="3" />
 </manifest> 
