--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionCode="32"
-	android:versionName="1.99.091016">
+	package="net.gumbercules.loot" android:versionCode="33" android:versionName="2.0.0">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
 			android:screenOrientation="unspecified" android:launchMode="singleTask"
