--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionName="2.0.2" android:versionCode="35">
+	package="net.gumbercules.loot" android:versionName="2.0.2"
+	android:versionCode="35">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
-			android:screenOrientation="unspecified" android:launchMode="singleTask"
-			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.AccountChooser" />
-		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.TransactionActivity" />
-		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.TransactionEdit" />
-		<activity android:screenOrientation="unspecified"
-			android:name="net.gumbercules.loot.AccountEdit" />
+			android:launchMode="singleTask" android:clearTaskOnLaunch="true"
+			android:name="net.gumbercules.loot.AccountChooser" />
+		<activity android:name="net.gumbercules.loot.TransactionActivity" />
+		<activity android:name="net.gumbercules.loot.TransactionEdit" />
+		<activity android:name="net.gumbercules.loot.AccountEdit" />
 		<activity android:name="net.gumbercules.loot.RepeatActivity" />
 		<activity android:name="net.gumbercules.loot.SettingsActivity" />
 		<activity android:launchMode="singleTask" android:label="@string/app_name"
@@ -33,6 +31,7 @@
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
 		</activity>
+		<activity android:name="net.gumbercules.loot.ChangeLogActivity" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-sdk android:minSdkVersion="3" />
