--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionName="2.0.4"
-	android:versionCode="37">
+	package="net.gumbercules.loot" android:versionCode="38"
+	android:versionName="2.0.5">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
 			android:launchMode="singleTask" android:clearTaskOnLaunch="true"
