--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionName="2.0.7"
-	android:versionCode="43">
+	package="net.gumbercules.loot" android:versionName="2.0.90"
+	android:versionCode="44">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
 			android:launchMode="singleTask" android:clearTaskOnLaunch="true"
-			android:name="net.gumbercules.loot.AccountChooser" />
-		<activity android:name="net.gumbercules.loot.TransactionActivity" />
-		<activity android:name="net.gumbercules.loot.TransactionEdit" />
-		<activity android:name="net.gumbercules.loot.AccountEdit" />
-		<activity android:name="net.gumbercules.loot.RepeatActivity" />
-		<activity android:name="net.gumbercules.loot.SettingsActivity" />
+			android:name="net.gumbercules.loot.account.AccountChooser" />
+		<activity android:name="net.gumbercules.loot.transaction.TransactionActivity" />
+		<activity android:name="net.gumbercules.loot.transaction.TransactionEdit" />
+		<activity android:name="net.gumbercules.loot.account.AccountEdit" />
+		<activity android:name="net.gumbercules.loot.repeat.RepeatActivity" />
+		<activity android:name="net.gumbercules.loot.preferences.SettingsActivity" />
 		<activity android:launchMode="singleTask" android:label="@string/app_name"
 			android:clearTaskOnLaunch="true" android:name="net.gumbercules.loot.PinActivity">
 			<intent-filter>
@@ -21,10 +21,10 @@
 		</activity>
 		<activity android:name="net.gumbercules.loot.DonateActivity" />
 		<provider android:authorities="net.gumbercules.loot.transactionprovider"
-			android:name="net.gumbercules.loot.TransactionProvider" />
-		<provider android:name="net.gumbercules.loot.AccountProvider"
+			android:name="net.gumbercules.loot.transaction.TransactionProvider" />
+		<provider android:name="net.gumbercules.loot.account.AccountProvider"
 			android:authorities="net.gumbercules.loot.accountprovider" />
-		<activity android:name="net.gumbercules.loot.PremiumNotFoundActivity" />
+		<activity android:name="net.gumbercules.loot.premium.PremiumNotFoundActivity" />
 		<activity android:name="net.gumbercules.loot.AboutActivity">
 			<intent-filter>
 				<action android:name="net.gumbercules.loot.intent.action.ABOUT" />
