added repeat manager interface; still needs edit and delete functions, possibly increase the text size

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -32,6 +32,7 @@
 			</intent-filter>
 		</activity>
 		<activity android:name="net.gumbercules.loot.ChangeLogActivity" />
+		<activity android:name="net.gumbercules.loot.repeat.RepeatManagerActivity" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-sdk android:minSdkVersion="3" />
