--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,6 +17,8 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 				<category android:name="android.intent.category.DEFAULT" />
+				<category android:name="net.gumbercules.category.LAUNCHER" />
+				<data android:scheme="widget" android:host="net.gumbercules.loot" />
 			</intent-filter>
 		</activity>
 		<activity android:name="net.gumbercules.loot.DonateActivity" />
