--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -17,7 +17,13 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+		</activity>
+		<activity android:name="net.gumbercules.loot.premium.WidgetInterceptor">
+			<intent-filter>
+			    <action android:name="net.gumbercules.action.WIDGET" />
 				<category android:name="net.gumbercules.category.LAUNCHER" />
+				<category android:name="android.intent.category.DEFAULT" />
 				<data android:scheme="widget" android:host="net.gumbercules.loot" />
 			</intent-filter>
 		</activity>
