fixed crashing bug when calculating balances for accounts with no transactions fixed crashing bug for widgets with no accounts added support for multiple screen densities

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -46,5 +46,6 @@
             android:authorities="net.gumbercules.loot.optionsprovider" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
-	<uses-sdk android:minSdkVersion="3" />
+	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
+	<supports-screens />
 </manifest> 
