--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:versionCode="47" android:versionName="2.1.2">
+	package="net.gumbercules.loot" android:versionCode="47"
+	android:versionName="2.1.2">
 	<application android:icon="@drawable/icon" android:label="@string/app_name">
 		<activity android:label="@string/app_name"
 			android:launchMode="singleTask" android:clearTaskOnLaunch="true"
@@ -20,7 +21,7 @@
 		</activity>
 		<activity android:name="net.gumbercules.loot.premium.WidgetInterceptor">
 			<intent-filter>
-			    <action android:name="net.gumbercules.action.WIDGET" />
+				<action android:name="net.gumbercules.action.WIDGET" />
 				<category android:name="net.gumbercules.category.LAUNCHER" />
 				<category android:name="android.intent.category.DEFAULT" />
 				<data android:scheme="widget" android:host="net.gumbercules.loot" />
@@ -38,14 +39,15 @@
 		<activity android:name="net.gumbercules.loot.repeat.RepeatManagerActivity" />
 		<activity android:name="net.gumbercules.loot.premium.ViewImage"
 			android:theme="@android:style/Theme.Dialog" />
-        <provider android:authorities="net.gumbercules.loot.transactionprovider"
-            android:name="net.gumbercules.loot.transaction.TransactionProvider" />
-        <provider android:name="net.gumbercules.loot.account.AccountProvider"
-            android:authorities="net.gumbercules.loot.accountprovider" />
-        <provider android:name="net.gumbercules.loot.backend.OptionsProvider"
-            android:authorities="net.gumbercules.loot.optionsprovider" />
+		<provider android:authorities="net.gumbercules.loot.transactionprovider"
+			android:name="net.gumbercules.loot.transaction.TransactionProvider" />
+		<provider android:name="net.gumbercules.loot.account.AccountProvider"
+			android:authorities="net.gumbercules.loot.accountprovider" />
+		<provider android:name="net.gumbercules.loot.backend.OptionsProvider"
+			android:authorities="net.gumbercules.loot.optionsprovider" />
 	</application>
 	<uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
 	<supports-screens />
 </manifest> 
