--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -58,5 +58,6 @@
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
+	<uses-feature android:name="android.hardware.touchscreen" />
 	<supports-screens />
 </manifest> 
