--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.gumbercules.loot" android:installLocation="auto" android:versionName="2.2.3" android:versionCode="52">
-	<application android:icon="@drawable/icon" android:label="@string/app_name">
+	package="net.gumbercules.loot" android:installLocation="auto"
+	android:versionName="2.2.3" android:versionCode="52">
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+	   android:backupAgent="net.gumbercules.loot.premium.DbBackupAgent">
 		<activity android:label="@string/app_name"
 			android:launchMode="singleTask" android:clearTaskOnLaunch="true"
 			android:name="net.gumbercules.loot.account.AccountChooser" />
