--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.gumbercules.loot" android:installLocation="auto"
-	android:versionName="2.2.3" android:versionCode="52">
+	android:versionCode="53" android:versionName="2.3.0_alpha1">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	   android:backupAgent="net.gumbercules.loot.premium.DbBackupAgent">
 		<activity android:label="@string/app_name"
