--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.gumbercules.loot" android:installLocation="auto"
-	android:versionCode="53" android:versionName="2.3.0_alpha1">
+	android:versionCode="53" android:versionName="3.0.0_alpha1">
 	<application android:icon="@drawable/icon" android:label="@string/app_name"
 	   android:backupAgent="net.gumbercules.loot.premium.DbBackupAgent">
 		<activity android:label="@string/app_name"
@@ -46,6 +46,8 @@
 			android:authorities="net.gumbercules.loot.accountprovider" />
 		<provider android:name="net.gumbercules.loot.backend.OptionsProvider"
 			android:authorities="net.gumbercules.loot.optionsprovider" />
+		<provider android:name="net.gumbercules.loot.premium.SynchronizationProvider"
+		    android:authorities="net.gumbercules.loot.synchronizationprovider" />
 		<receiver android:name="net.gumbercules.loot.backend.DbUpdateReceiver">
 			<intent-filter>
 				<action android:name="net.gumbercules.loot.intent.ACCOUNT_UPDATED" />
@@ -57,7 +59,6 @@
 			</intent-filter>
 		</service>
 	</application>
-	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 	<uses-sdk android:minSdkVersion="3" android:targetSdkVersion="4" />
 	<uses-feature android:name="android.hardware.touchscreen" />
