--- a/.classpath
+++ b/.classpath
@@ -8,5 +8,6 @@
 			<attribute name="javadoc_location" value="file:/C:/javacsv/doc/"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="libs/acra-3.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
